--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
                 <div id="four-three" class="square" onclick="change(14)"></div>
                 <div id="four-four" class="square" onclick="change(15)"></div>  
         </div> 
-        <button type="button" onclick="upsetOrder()">重新开始</button>        
+        <div id="pre"></div>
+               
     </div>
+    
+    <button type="button" onclick="upsetOrder()">重新开始</button> 
 <!--   
     <p id="screen"></p>
 
