--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	<link rel="stylesheet" type="text/css" href="puzzle.css" />
 </head>
 <body>
+    <div id="bg">
+        <img src="background.jpg"  width="100%" height="100%" />
+    </div>
+
     <div id="whole-page">
         <h1>拼图游戏</h1>
         <div id="whole-pic">
@@ -33,7 +37,7 @@
         <div id="pre"></div>
                
     </div>
-    
+
     <button type="button" onclick="upsetOrder()">重新开始</button> 
 <!--   
     <p id="screen"></p>
