--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBdivC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	<title>Puzzle</title>
-	<script src="puzzle.js"></script>
-	<link rel="stylesheet" type="text/css" href="puzzle.css" />
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <title>puzzle</title>
+    <script src="puzzle.js"></script>
+    <link rel="stylesheet" type="text/css" href="puzzle.css" />
 </head>
 <body>
     <div id="bg">
@@ -14,46 +14,31 @@
     <div id="whole-page">
         <h1>拼图游戏</h1>
         <div id="whole-pic">
-                <div id="one-one" class="square" onclick="change(0)"></div>
-                <div id="one-two" class="square" onclick="change(1)"></div>
-                <div id="one-three" class="square" onclick="change(2)"></div>
-                <div id="one-four" class="square" onclick="change(3)"></div> 
+                <div id="one-one" class="oneOne" ></div>
+                <div id="one-two" class="oneTwo" ></div>
+                <div id="one-three" class="oneThree" ></div>
+                <div id="one-four" class="oneFour" ></div> 
 
-                <div id="two-one" class="square" onclick="change(4)"></div>
-                <div id="two-two" class="square" onclick="change(5)"></div>
-                <div id="two-three" class="square" onclick="change(6)"></div>
-                <div id="two-four" class="square" onclick="change(7)"></div>
+                <div id="two-one" class="twoOne" ></div>
+                <div id="two-two" class="twoTwo" ></div>
+                <div id="two-three" class="twoThree" ></div>
+                <div id="two-four" class="twoFour" ></div>
 
-                <div id="three-one" class="square" onclick="change(8)"></div>
-                <div id="three-two" class="square" onclick="change(9)"></div>
-                <div id="three-three" class="square" onclick="change(10)"></div>
-                <div id="three-four" class="square" onclick="change(11)"></div> 
+                <div id="three-one" class="threeOne" ></div>
+                <div id="three-two" class="threeTwo" ></div>
+                <div id="three-three" class="threeThree" ></div>
+                <div id="three-four" class="threeFour" ></div> 
 
-                <div id="four-one" class="square" onclick="change(12)"></div>
-                <div id="four-two" class="square" onclick="change(13)"></div>
-                <div id="four-three" class="square" onclick="change(14)"></div>
-                <div id="four-four" class="square" onclick="change(15)"></div>  
+                <div id="four-one" class="fourOne" ></div>
+                <div id="four-two" class="fourTwo" ></div>
+                <div id="four-three" class="fourThree" ></div>
+                <div id="four-four" class="fourFour" ></div>  
         </div> 
         <div id="pre"></div>
                
     </div>
 
-    <button type="button" onclick="upsetOrder()">重新开始</button> 
-<!--   
-    <p id="screen"></p>
-
-    <script type="text/javascript">
-        var square = new Array("one-one","one-two","one-three","one-four",
-        "two-one","two-two","two-three","two-four",
-        "three-one","three-two","three-three","three-four",
-        "four-one","four-two","four-three","four-four");
-
-        for(var i = 0; i < 16; i++) {
-            document.write(document.getElementById(square[i]).offsetLeft+" "+document.getElementById(square[i]).offsetTop);
-            document.write("第一行\n第二行");
-        }
-    </script>
-    -->
+    <button type="button" id="restart">重新开始</button> 
 </body>
 </html>
 
