--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="bg">
-        <img src="background.jpg"  width="100%" height="100%" />
+        <img src="pic/background.jpg"  width="100%" height="100%" />
     </div>
 
     <div id="whole-page">
