--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBdivC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<!DOCTYPE html>
+<html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <title>puzzle</title>
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="bg">
-        <img src="pic/background.jpg"  width="100%" height="100%" />
+        <img src="pic/background.jpg" alt="background" width="1345" height="622" />
     </div>
 
     <div id="whole-page">
