--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="bg">
-        <img src="pic/background.jpg" alt="background" width="1345" height="622" />
+        <img src="http://i1.piimg.com/567571/34fac6cd359d2c9f.jpg" alt="background" width="1345" height="622" />
     </div>
 
     <div id="whole-page">
