--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </div>
 
     <div id="whole-page">
-        <h1>拼图游戏</h1>
-        <button type="button" id="restart">重新开始</button>
+        <h1>毕业纪念</h1>
+        <button type="button" id="restart">新的开始</button>
         <div id="whole-pic">
                 <div id="one-one" class="oneOne" ></div>
                 <div id="one-two" class="oneTwo" ></div>
