--- a/index.html
+++ b/index.html
@@ -1,47 +1,21 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+ "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" xml:lang="en-US">
 <head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>puzzle</title>
-    <script src="puzzle.js"></script>
-    <link rel="stylesheet" type="text/css" href="puzzle.css" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>best wish</title>
+    <link rel="stylesheet" href="wish.css">
+    <script type="text/javascript" src="wish.js"></script>
+
 </head>
 <body>
+    <audio id="sound" src="http://sc1.111ttt.com:8282/2015/1/09/17/102171904054.mp3?tflag=1483198079&pin=2f4e98595cc37b0f76b13327d1c95c29" autoplay></audio>
+    <div id="icon"></div>
     <div id="bg">
-        <img src="http://i1.piimg.com/567571/e26eb4f70fe64000.jpg" alt="background" width="1345" height="622" />
+        <img src="http://i1.piimg.com/567571/219e4f0dcc5574b3.jpg" alt="background" width="1345" height="622" />
     </div>
+    <h1>Happy new year</h1>
 
-    <div id="whole-page">
-        <h1>毕业纪念</h1>
-        <button type="button" id="restart">新的开始</button>
-        <div id="whole-pic">
-                <div id="one-one" class="oneOne" ></div>
-                <div id="one-two" class="oneTwo" ></div>
-                <div id="one-three" class="oneThree" ></div>
-                <div id="one-four" class="oneFour" ></div> 
-
-                <div id="two-one" class="twoOne" ></div>
-                <div id="two-two" class="twoTwo" ></div>
-                <div id="two-three" class="twoThree" ></div>
-                <div id="two-four" class="twoFour" ></div>
-
-                <div id="three-one" class="threeOne" ></div>
-                <div id="three-two" class="threeTwo" ></div>
-                <div id="three-three" class="threeThree" ></div>
-                <div id="three-four" class="threeFour" ></div> 
-
-                <div id="four-one" class="fourOne" ></div>
-                <div id="four-two" class="fourTwo" ></div>
-                <div id="four-three" class="fourThree" ></div>
-                <div id="four-four" class="fourFour" ></div>  
-        </div> 
-        <div id="pre"></div>
-               
-    </div>
-
- 
 </body>
 </html>
-
-
 
